@@ -119,6 +119,7 @@ public class ESQueryBuilder {
 
     private void whereClause(Context context, WhereClause whereClause) throws IOException {
         assert !whereClause.noMatch() : "A where clause with no match should not result in an ES query";
+        context.builder.startObject(Fields.QUERY);
         if (whereClause.hasQuery()) {
             visitor.process(whereClause.query(), context);
         } else {
